2021-03-23  Cameron McCormack  <heycam@apple.com>

        Update .clang-format to reflect WebKit style better.
        https://bugs.webkit.org/show_bug.cgi?id=223229

        First, SpaceBeforeCpp11BracedList is set to true so that a space
        is introduced after a variable name and before a braced initializer.

        Second, AlwaysBreakTemplateDeclarations is changed from false (an
        invalid value) to No, which should result in no line breaks being
        introduced in template declarations.  Although there is a mix of
        template declaration line breaking styles in the codebase, changing
        this option to No will prevent clang-format from introducing one
        where the patch author decides to write the declaration all on one
        line.

        Reviewed by Alex Christensen.

        * .clang-format:

2021-03-22  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Wrong variable used in FindFontconfig used to pick version from pkg-config
        https://bugs.webkit.org/show_bug.cgi?id=223557

        Reviewed by Michael Catanzaro.

        * Source/cmake/FindFontconfig.cmake: Fix to use ${PC_FONTCONFIG_VERSION}.

2021-03-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [WPE] Bump API version when building with libsoup3
        https://bugs.webkit.org/show_bug.cgi?id=223437

        Reviewed by Adrian Perez de Castro.

        Use 1.1 as the API version when building with soup3.

        * Source/PlatformWPE.cmake:
        * Source/cmake/OptionsWPE.cmake:

2021-03-17  Martin Robinson  <mrobinson@igalia.com>

        [GTK][WPE] Enable CSS scroll snap support by default
        https://bugs.webkit.org/show_bug.cgi?id=222641

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/OptionsGTK.cmake: Enable CSS scroll snap by default.
        * Source/cmake/OptionsWPE.cmake: Ditto.

2021-03-16  Khem Raj  <raj.khem@gmail.com>

        [CMake] Build fails on RISC-V with GCC 11