@@ -62,12 +62,6 @@ list(APPEND WebCore_LIBRARIES
     ${UPOWERGLIB_LIBRARIES}
 )
 
-if (USE_LCMS)
-    list(APPEND WebCore_LIBRARIES
-        ${LCMS2_LIBRARIES}
-    )
-endif ()
-
 list(APPEND WebCore_SYSTEM_INCLUDE_DIRECTORIES
     ${ATK_INCLUDE_DIRS}
     ${GIO_UNIX_INCLUDE_DIRS}
@@ -77,8 +71,8 @@ list(APPEND WebCore_SYSTEM_INCLUDE_DIRECTORIES
 )
 
 if (USE_LCMS)
-    list(APPEND WebCore_SYSTEM_INCLUDE_DIRECTORIES
-        ${LCMS2_INCLUDE_DIR}
+    list(APPEND WebCore_LIBRARIES
+        LCMS2::LCMS2
     )
 endif ()
 
