@@ -1,73 +1,105 @@
-# - Find LCMS2
-# Find the LCMS2 includes and library
-# This module defines
-#  LCMS2_INCLUDE_DIR, where to find lcms.h
-#  LCMS2_LIBRARIES, the libraries needed to use LCMS2.
-#  LCMS2_VERSION, The value of LCMS_VERSION defined in lcms.h
-#  LCMS2_FOUND, If false, do not try to use LCMS2.
-
-
-# Copyright (c) 2008, Adrian Page, <adrian@pagenet.plus.com>
-# Copyright (c) 2009, Cyrille Berger, <cberger@cberger.net>
+# Copyright (C) 2021 Igalia S.L.
 #
-# Redistribution and use is allowed according to the terms of the BSD license.
-# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in the
+#    documentation and/or other materials provided with the distribution.
+#
+# THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL APPLE INC. OR ITS CONTRIBUTORS
+# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
+# THE POSSIBILITY OF SUCH DAMAGE.
 
+#[=======================================================================[.rst:
+FindLCMS2
+---------
 
-# use pkg-config to get the directories and then use these values
-# in the FIND_PATH() and FIND_LIBRARY() calls
-if (NOT WIN32)
-   find_package(PkgConfig)
-   pkg_check_modules(PC_LCMS2 lcms2)
-   set(LCMS2_DEFINITIONS ${PC_LCMS2_CFLAGS_OTHER})
-endif (NOT WIN32)
+Find LCMS2 headers and libraries.
 
-find_path(LCMS2_INCLUDE_DIR lcms2.h
-   PATHS
-   ${PC_LCMS2_INCLUDEDIR}
-   ${PC_LCMS2_INCLUDE_DIRS}
-   PATH_SUFFIXES lcms2 liblcms2
+Imported Targets
+^^^^^^^^^^^^^^^^
+
+``LCMS2::LCMS2``
+  The LCMS2 library, if found.
+
+Result Variables
+^^^^^^^^^^^^^^^^
+
+This will define the following variables in your project:
+
+``LCMS2_FOUND``
+  true if (the requested version of) LCMS2 is available.
+``LCMS2_VERSION``
+  the version of LCMS2.
+``LCMS2_LIBRARIES``
+  the libraries to link against to use LCMS2.
+``LCMS2_INCLUDE_DIRS``
+  where to find the LCMS2 headers.
+``LCMS2_COMPILE_OPTIONS``
+  this should be passed to target_compile_options(), if the
+  target is not used for linking
+
+#]=======================================================================]
+
+find_package(PkgConfig QUIET)
+if (PkgConfig_FOUND)
+    pkg_check_modules(PC_LCMS2 QUIET lcms2)
+    set(LCMS2_COMPILE_OPTIONS ${PC_LCMS2_CFLAGS_OTHER})
+    set(LCMS2_VERSION ${PC_LCMS2_VERSION})
+endif ()
+
+find_path(LCMS2_INCLUDE_DIR
+    NAMES lcms2.h
+    HINTS ${PC_LCMS2_INCLUDEDIR} ${PC_LCMS2_INCLUDE_DIRS} ${LCMS2_INCLUDE_DIR}
+    PATH_SUFFIXES lcms2 liblcms2
 )
 
-find_library(LCMS2_LIBRARIES NAMES lcms2 liblcms2 lcms-2 liblcms-2
-   PATHS
-   ${PC_LCMS2_LIBDIR}
-   ${PC_LCMS2_LIBRARY_DIRS}
-   PATH_SUFFIXES lcms2
+find_library(LCMS2_LIBRARY
+    NAMES ${LCMS2_NAMES} lcms2 liblcms2 lcms-2 liblcms-2
+    HINTS ${PC_LCMS2_LIBDIR} ${PC_LCMS2_LIBRARY_DIRS}
+    PATH_SUFFIXES lcms2
 )
 
-if (LCMS2_INCLUDE_DIR AND LCMS2_LIBRARIES)
-   set(LCMS2_FOUND TRUE)
-else (LCMS2_INCLUDE_DIR AND LCMS2_LIBRARIES)
-   set(LCMS2_FOUND FALSE)
-endif (LCMS2_INCLUDE_DIR AND LCMS2_LIBRARIES)
+if (LCMS2_INCLUDE_DIR AND NOT LCMS_VERSION)
+    file(READ ${LCMS2_INCLUDE_DIR}/lcms2.h LCMS2_VERSION_CONTENT)
+    string(REGEX MATCH "#define[ \t]+LCMS_VERSION[ \t]+([0-9]+)[ \t]*\n" LCMS2_VERSION_MATCH ${LCMS2_VERSION_CONTENT})
+    if (LCMS2_VERSION_MATCH)
+        string(SUBSTRING ${CMAKE_MATCH_1} 0 1 LCMS2_VERSION_MAJOR)
+        string(SUBSTRING ${CMAKE_MATCH_1} 1 2 LCMS2_VERSION_MINOR)
+        set(LCMS2_VERSION "${LCMS2_VERSION_MAJOR}.${LCMS2_VERSION_MINOR}")
+    endif ()
+endif ()
+
+include(FindPackageHandleStandardArgs)
+find_package_handle_standard_args(LCMS2
+    FOUND_VAR LCMS2_FOUND
+    REQUIRED_VARS LCMS2_LIBRARY LCMS2_INCLUDE_DIR
+    VERSION_VAR LCMS2_VERSION
+)
+
+if (LCMS2_LIBRARY AND NOT TARGET LCMS2::LCMS2)
+    add_library(LCMS2::LCMS2 UNKNOWN IMPORTED GLOBAL)
+    set_target_properties(LCMS2::LCMS2 PROPERTIES
+        IMPORTED_LOCATION "${LCMS2_LIBRARY}"
+        INTERFACE_COMPILE_OPTIONS "${LCMS2_COMPILE_OPTIONS}"
+        INTERFACE_INCLUDE_DIRECTORIES "${LCMS2_INCLUDE_DIR}"
+    )
+endif ()
+
+mark_as_advanced(LCMS2_INCLUDE_DIR LCMS2_LIBRARY)
 
 if (LCMS2_FOUND)
-   file(READ ${LCMS2_INCLUDE_DIR}/lcms2.h LCMS2_VERSION_CONTENT)
-   string(REGEX MATCH "#define LCMS_VERSION[ ]*[0-9]*\n" LCMS2_VERSION_MATCH ${LCMS2_VERSION_CONTENT})
-   if (LCMS2_VERSION_MATCH)
-      string(REGEX REPLACE "#define LCMS_VERSION[ ]*([0-9]*)\n" "\\1" LCMS2_VERSION ${LCMS2_VERSION_MATCH})
-      if (NOT LCMS2_FIND_QUIETLY)
-         string(SUBSTRING ${LCMS2_VERSION} 0 1 LCMS2_MAJOR_VERSION)
-         string(SUBSTRING ${LCMS2_VERSION} 1 2 LCMS2_MINOR_VERSION)
-         message(STATUS "Found lcms version ${LCMS2_MAJOR_VERSION}.${LCMS2_MINOR_VERSION}, ${LCMS2_LIBRARIES}")
-      endif (NOT LCMS2_FIND_QUIETLY)
-   else (LCMS2_VERSION_MATCH)
-      if (NOT LCMS2_FIND_QUIETLY)
-         message(STATUS "Found lcms2 but failed to find version ${LCMS2_LIBRARIES}")
-      endif (NOT LCMS2_FIND_QUIETLY)
-      set(LCMS2_VERSION NOTFOUND)
-   endif (LCMS2_VERSION_MATCH)
-else (LCMS2_FOUND)
-   if (NOT LCMS2_FIND_QUIETLY)
-      if (LCMS2_FIND_REQUIRED)
-         message(FATAL_ERROR "Required package lcms2 NOT found")
-      else (LCMS2_FIND_REQUIRED)
-         message(STATUS "lcms2 NOT found")
-      endif (LCMS2_FIND_REQUIRED)
-   endif (NOT LCMS2_FIND_QUIETLY)
-endif (LCMS2_FOUND)
-
-mark_as_advanced(LCMS2_INCLUDE_DIR LCMS2_LIBRARIES LCMS2_VERSION)
-
-
+    set(LCMS2_LIBRARIES ${LCMS2_LIBRARY})
+    set(LCMS2_INCLUDE_DIRS ${LCMS2_INCLUDE_DIR})
+endif ()
