@@ -1,3 +1,15 @@
+2021-03-23  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use an imported target for the LCMS2 library
+        https://bugs.webkit.org/show_bug.cgi?id=223442
+
+        Reviewed by Carlos Garcia Campos.
+
+        No new tests needed.
+
+        * PlatformGTK.cmake: Use the LCMS::LCMS2 imported target, only with USE_LCMS enabled.
+        * PlatformWPE.cmake: Ditto.
+
 2021-03-23  Jer Noble  <jer.noble@apple.com>
 
         [Cocoa][Opus] Protect against variable frame duration packets
