@@ -1,3 +1,14 @@
+2021-03-23  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use an imported target for the LCMS2 library
+        https://bugs.webkit.org/show_bug.cgi?id=223442
+
+        Reviewed by Carlos Garcia Campos.
+
+        * Source/cmake/FindLCMS2.cmake: Replaced find module by a new one which
+        defines a LCMS2::LCMS2 imported target and in general uses more modern CMake
+        constructs.
+
 2021-03-23  Cameron McCormack  <heycam@apple.com>
 
         Update .clang-format to reflect WebKit style better.
